# CVPR24-MedSAM-on-Laptop

./: .gitignore  .gitmodules  CITATION.bib  DockerfileCpp  DockerfileCpp.dockerignore  DockerfileONNX  DockerfileONNX.dockerignore  DockerfileOpenVINO  DockerfileOpenVINO.dockerignore  LICENSE  PerfectMetaONNX.py  PerfectMetaOpenVINO.py  README.md  build_docker_cpp.sh  build_docker_onnx.sh  build_docker_openvino.sh  daft.py  distill.py  distill_fulldataset.py  export_onnx.py  extract_evit.py  extract_modalities3D.sh  finetune.py  finetune_npz_devit_fulldataset.py  finetune_npz_devit_fulldataset3D.py  liteov.py  model_conversion_requirements.txt  modelmerge.py  predict_cpp.sh  predict_onnx.sh  predict_openvino.sh  requirements.txt  split_dataset.py  tiny_vit_sam.py  train.csv  training_requirements.txt  val.csv
cpp/: CMakeLists.txt  LICENSE  README.md
cpp/src/: lrucache.hpp  main.cpp
datasplit/: modalities3D.py
devit/: checkpoints_to_weights.py  latest_checkpoint_to_pth.py  onnx2openvino.py
distillation/: distill_fulldataset.py  modelmerge.py
evaluation/: compute_metrics.py
segment_anything/modeling/: modified_image_encoder.py
